# weissmies_sdsc_hackathon

./: .env.template  .gitignore  LICENSE  README.md  graph_querying_transcripts.ipynb  grouped_bills_with_topics.json  index.html  issuelist.json  mps_per_canton.json  nb.ipynb  nb_francesco.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt
notebooks/: nb.ipynb  nb_francesco.ipynb
src/: App.css  App.jsx  CantonDetails.jsx  Choropleth.jsx  HorizontalBarChart.jsx  StackedBarChart.jsx  index.css  main.jsx  utils.jsx
