[tool.poetry]
name = "sdsc_hack"
version = "0.1.0"
description = ""
authors = ["Petar Stupar", "Clément Lefebvre", "Francesco Garassino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.21.0"
scipy = "^1.13.0"
matplotlib = "3.7.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
nbformat = "^5.10.4"
py2neo = "^2021.2.4"
networkx = "^3.4.2"
python-dotenv = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
